--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
   text-align: center;
+  background-color: #f4f4f4;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 100px auto 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  font-size: 1em;
   color: white;
+}
+
+.MainContent {
+  background-color: #f4f4f4;
+  min-height: calc(100vh - 100px - 35px);
+}
+
+footer {
+  background-color: #282c34;
+  font-size: 1em;
+  color: white;
+  padding: 15px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+}
+
+.nav-link {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+}
+
+li {
+  display: block;
+  padding-right: 5px;
+}
+
+li:hover {
+  cursor: pointer;
+  color: gold;
 }
